--- a/main.css
+++ b/main.css
@@ -8,15 +8,15 @@ html {
 }
 
 body {
+    height: 100vh;
+    width: 100vw;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 1000px;
-    height: 4000px;
-    margin: 0 auto;
-    border: 3px solid black;
+    margin: 0;
     background-color: white;
 }
+
 
 a:focus, a:hover {
     font-size: italic;
@@ -34,12 +34,30 @@ a:focus, a:hover {
 }
 
 .carousel {
-    width: 640px;
-    height: 300px;
+    width: 40vw;
+    margin: auto;
 }
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  border: 1px solid black;
+  background-image: none;
+}
+
+.sneaker-cards {
+    padding: 40px;
+    background-color: #1AC40E;
+}
+
+
+
 .footer {
-    position: fixed;
+ 
     left: 0;
     bottom: 0;
     width: 100%;
@@ -48,4 +66,8 @@ a:focus, a:hover {
     text-align: center;
     padding: 10px;
     font-size: 0.5rem;
+}
+
+.title {
+    margin: auto;
 }
