--- a/main.css
+++ b/main.css
@@ -3,13 +3,7 @@
     padding: 0;
 }
 
-html {
-    background-color: cornsilk;
-}
-
-body {
-    height: 100vh;
-    width: 100vw;
+html,body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
@@ -51,13 +45,13 @@ a:focus, a:hover {
 
 .sneaker-cards {
     padding: 40px;
-    background-color: #1AC40E;
+    background-color: slategray;
 }
 
 
 
 .footer {
- 
+   
     left: 0;
     bottom: 0;
     width: 100%;
@@ -65,7 +59,7 @@ a:focus, a:hover {
     color: white;
     text-align: center;
     padding: 10px;
-    font-size: 0.5rem;
+
 }
 
 .title {
