added some stuff to index

--- a/pages/styles/shop_style.css
+++ b/pages/styles/shop_style.css
@@ -1,47 +1,55 @@
 .wrapper {
-    display: inline-grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 15px;
-    margin: 10px;
-
-  }
-  .footer {
-   
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: aliceblue;
-    color: white;
-    text-align: center;
-    padding: 10px;
-
+  display: inline-grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 15px;
+  margin: 10px;
 }
+
+html, body {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  margin: 0;
+  background-color: aliceblue;
+}
+
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(146, 151, 155);
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
 .pagination {
-    margin: auto;
+  margin: auto;
 }
 
 @media (max-width: 1024px) {
-    .wrapper {
-        margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 10px;
-      }
+  .wrapper {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
   }
+}
 
-  @media (max-width: 700px) {
-    .wrapper {
-        margin: auto;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-      }
+@media (max-width: 700px) {
+  .wrapper {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10px;
   }
-  @media (max-width: 2100px) {
-    .wrapper {
-        margin: auto;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 10px;
-      }
+}
+
+@media (max-width: 2100px) {
+  .wrapper {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
   }
+}
