--- a/main.css
+++ b/main.css
@@ -3,14 +3,13 @@
     padding: 0;
 }
 
-html,body {
+html, body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     margin: 0;
     background-color: white;
 }
-
 
 a:focus, a:hover {
     font-size: italic;
@@ -32,34 +31,40 @@ a:focus, a:hover {
     margin: auto;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  height: 100px;
-  width: 100px;
-  outline: black;
-  background-size: 100%, 100%;
-  border-radius: 50%;
-  border: 1px solid black;
-  background-image: none;
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    height: 100px;
+    width: 100px;
+    outline: black;
+    background-size: 100%, 100%;
+    border-radius: 50%;
+    border: 1px solid black;
+    background-image: none;
 }
 
 .sneaker-cards {
     padding: 40px;
-    background-color: slategray;
+    background-color: gray;
 }
 
-
+.h2 {
+    font-size: medium;
+    color: blue;
+}
 
 .footer {
-   
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: aliceblue;
-    color: white;
+    background-color: rgb(146, 151, 155);
+    color: red;
     text-align: center;
     padding: 10px;
+}
 
+main {
+    display: grid;
+    grid-template: 100 px 100 px / 150px 150px 150 px;
+    grid-gap: 15 px 20 px;
 }
 
 .title {
